/*
 * $Id: ChangeLog,v 1.1118 2013-07-26 02:36:18 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-07-25 23:35 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   + lib/hb
   + lib/hb/mingw
   + lib/xhb
   + lib/xhb/bcc
     This folders will hold the libraries builded with
     diferent compilers.
   + lib/hb/mingw/.cvsignore
   + lib/xhb/bcc/.cvsignore
   * lib/.cvsignore
     * Updated.

2013-07-25 23:20 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * manual/HowToBuild.txt
     * Updated.
   + manual/ooHG.h
   + manual/ooHG.hhc
   + manual/ooHG.hhk
   + manual/ooHG.hhp
   + manual/.cvsignore

2013-07-25 21:12 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ./Changelog
     + Added T O D O.
     ! Some entries corrected.
   + manual/images
     + Added folder to hold some images.
   + manual/images/bm0.gif
   + manual/images/harbour-logo.jpg
   + manual/HowToBuild.txt
   + manual/HYPERLINK.HTM
   + manual/IMAGE.HTM
   + manual/INTERNAL.HTM
   + manual/IPADDRESS.HTM
   + manual/LABEL.HTM
   + manual/LISTBOX.HTM
   + manual/MONTHCALENDAR.HTM
   + manual/OVERVIEW.HTM
   + manual/PLAYER.HTM
   + manual/PROGRESSBAR.HTM
   + manual/PROGRESSMETER.HTM
   + manual/RADIOGROUP.HTM
   + manual/RICHEDITBOX.HTM
   + manual/SCREENSAVER.HTM
   + manual/SLIDER.HTM
   + manual/SPINNER.HTM
   + manual/SPLITBOX.HTM
   + manual/STATUSBAR.HTM
   + manual/TAB.HTM
   + manual/TEXTARRAY.HTM
   + manual/TEXTBOX.HTM
   + manual/TIMEPICKER.HTM
   + manual/TIMER.HTM
   + manual/TOOLBAR.HTM
   + manual/TPRINT.HTM
   + manual/TREE.HTM
   + manual/UNCOMPRESS.HTM
   + manual/WAVE.HTM
   + manual/WINDOW.HTM
   + manual/XBROWSE.HTM

2013-07-25 20:40 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * manual/ACTIVEX.HTM
     * Changed case of referenced page name.
   + manual/ANIMATEBOX.HTM
   + manual/BROWSE.HTM