@@ -1,11 +1,15 @@
 /*
- * $Id: ChangeLog,v 1.1118 2013-07-26 02:36:18 fyurisich Exp $
+ * $Id: ChangeLog,v 1.1119 2013-07-26 19:28:43 migsoft Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2013-07-26 14:03 UTC-0400 MigSoft <migsoft@oohg.org>
+   * source/c_dialogs.c
+     * C_PUTFILE, Based upon a code borrowed from an HMG Ext.
 
 2013-07-25 23:35 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
    + lib/hb
